/*CREATE DATABASE creat_tables_estudantes
character set utf8mb4
collate utf8mb4_general_ci;

use creat_tables_estudantes;*/

/*Cria as tabelas*/
CREATE TABLE ESTUDANTES(
id_estudante INT AUTO_INCREMENT PRIMARY KEY NOT NULL,
nome VARCHAR(45) NOT NULL,
data_nascimento DATE NOT NULL,
cpf VARCHAR(11) NOT NULL,
email VARCHAR(30) NOT NULL
);

CREATE TABLE CURSOS(
id_curso INT AUTO_INCREMENT PRIMARY KEY NOT NULL,
nome_curso VARCHAR(45) NOT NULL,
carga_horaria INT NOT NULL
);

CREATE TABLE MATRICULAS_ESTUDANTE(
id_matricula INT AUTO_INCREMENT PRIMARY KEY NOT NULL,
data_matricula DATE NOT NULL,
status_matricula VARCHAR(20) NOT NULL,
id_estudante INT NOT NULL,
id_curso INT NOT NULL,
UNIQUE (id_estudante, id_curso),
CHECK (status_matricula IN ('Ativo', 'Inativo'))
);

CREATE TABLE NOTAS (
id_nota INT AUTO_INCREMENT PRIMARY KEY NOT NULL,
nota_estudante DECIMAL(4,2) NOT NULL,
semestre VARCHAR(14),
id_matricula INT NOT NULL
);

/*Cria os relacionamentos*/
ALTER TABLE MATRICULAS_ESTUDANTE ADD CONSTRAINT ESTUDANTES_MATRICULAS_ESTUDANTE_FK
FOREIGN KEY (id_estudante)
REFERENCES ESTUDANTES (id_estudante);

ALTER TABLE MATRICULAS_ESTUDANTE ADD CONSTRAINT CURSOS_MATRICULAS_ESTUDANTE_FK
FOREIGN KEY (id_curso)
REFERENCES CURSOS (id_curso);

ALTER TABLE NOTAS ADD CONSTRAINT MATRICULAS_ESTUDANTE_NOTAS_FK
FOREIGN KEY (id_matricula)
REFERENCES MATRICULAS_ESTUDANTE (id_matricula);

/*Garante acesso total as tabelas*/
GRANT ALL ON LABDATABASE.ESTUDANTES TO LABDATABASE;
GRANT ALL ON LABDATABASE.CURSOS TO LABDATABASE;
GRANT ALL ON LABDATABASE.MATRICULAS_ESTUDANTE TO LABDATABASE;
GRANT ALL ON LABDATABASE.NOTAS TO LABDATABASE;


/*ALTER USER LABDATABASE quota unlimited on USERS;*/



