erDiagram
    ESTUDANTES {
        id_estudante INT PK "NOT NULL"
        nome VARCHAR(45) "NOT NULL"
        data_nascimento DATE "NOT NULL"
        cpf VARCHAR(11) "UNIQUE"
        email VARCHAR(30) "UNIQUE"
    }

    MATRICULAS_ESTUDANTE {
        id_matricula INT PK "NOT NULL"
        data_matricula DATE "NOT NULL"
        status VARCHAR(45) "NOT NULL"
        id_estudante INT FK "UNIQUE"
        id_curso INT FK "UNIQUE"
    }

    NOTAS {
        id_nota INT PK "NOT NULL"
        nota_estudante DECIMAL(4) "NOT NULL"
        semestre VARCHAR(14) "NOT NULL"
        id_matricula INT FK "NOT NULL"
    }

    CURSOS {
        id_curso INT PK "NOT NULL"
        nome_curso VARCHAR(45) "NOT NULL"
        carga_horaria INT "NOT NULL"
    }

    ESTUDANTES ||--o{ MATRICULAS_ESTUDANTE : "possui"
    CURSOS ||--o{ MATRICULAS_ESTUDANTE : "tem"
    MATRICULAS_ESTUDANTE ||--o{ NOTAS : "recebe"
